# diffflame

./: .gitignore  LICENSE  README.md  main.m
data/: chkSpec.py  clr.py  convert.py  genInterpChemTbl.py  genTbl.py  gen_task.py  pltPhySol.py  pltTmaxCrv.py  task.txt  task.xlsx
pic/: animation.py
scripts/: batchRun.py  buildTbl.py  cmpTmax.py  genTask.py  phy2z.py  pltCase.py  pltTbl.py  pltTmaxCrv.py  transAll.py
src/: CMakeLists.txt  DiffFlameSim.m  SConstruct  SolveFlame.py  SolveFlame0.m  SolveFlame1.m  SolveFlame2.m  SolveFlame3.m  SolveFlame4.m  SolveFlame5.m  SolveFlame6.m  ddf.m  df.m  main.cpp  main.m  main.py  main0.m  oppdiff.m  relaxation.m  run_task.m  solTriDiag.m
